fixed search spacing

--- a/notes-app-ep/src/index.css
+++ b/notes-app-ep/src/index.css
@@ -181,7 +181,7 @@ textarea:focus {
 
 .search {
   margin-top: 1vh;
-  margin-left: 5.2rem;
+  margin-left: 4rem;
   height: 3vh;
   width: 60vh;
   display: flex;
